--- a/package.json
+++ b/package.json
@@ -35,14 +35,19 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
+    "react-syntax-highlighter": "^15.5.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
     "tailwindcss-animated": "^1.0.1",
     "typescript": "5.1.6",
+    "typewriter-effect": "^2.20.1",
+    "uuid": "^9.0.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/react-syntax-highlighter": "^15.5.7",
+    "@types/uuid": "^9.0.2",
     "encoding": "^0.1.13"
   }
 }
